--- a/ApplikasjonBoknaden/ApplikasjonBoknaden.Droid/Resources/layout/FragmentItemStoreLayout.axml
+++ b/ApplikasjonBoknaden/ApplikasjonBoknaden.Droid/Resources/layout/FragmentItemStoreLayout.axml
@@ -4,83 +4,70 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:minWidth="25px"
         android:minHeight="25px"
-        android:id="@+id/linearLayout9"
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="vertical"
-            android:id="@+id/linearLayout1"
-            android:background="@layout/Blue_Button"
-            style="@style/button_text"
+        android:layout_height="wrap_content"
+        android:background="#fafafa">
+        <ImageView
+            android:src="@drawable/iconcamera"
+            android:id="@+id/AddNewItemImage"
+            android:clickable="true"
+            android:foregroundTint="#00000000"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="50.0dp"
+            android:layout_weight="2"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:tint="#ff0075a1" />
+        <android.support.v7.widget.CardView xmlns:p5="http://schemas.android.com/apk/res-auto"
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:id="@+id/cardView2"
+            p5:cardBackgroundColor="#fff2f5f9"
+            p5:cardCornerRadius="@dimen/abc_action_bar_content_inset_material"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1">
             <LinearLayout
                 android:orientation="horizontal"
                 android:minWidth="25px"
                 android:minHeight="25px"
-                android:id="@+id/linearLayout6"
+                android:id="@+id/linearLayout5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:src="@drawable/iconcamera"
-                    android:id="@+id/AddNewItemImage"
-                    android:clickable="true"
-                    android:foregroundTint="#00000000"
-                    android:layout_width="match_parent"
-                    android:layout_height="50.0dp"
-                    android:layout_weight="2"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true" />
-                <android.support.v7.widget.CardView xmlns:p5="http://schemas.android.com/apk/res-auto"
-                    android:minWidth="25px"
-                    android:minHeight="25px"
-                    android:id="@+id/cardView2"
-                    p5:cardBackgroundColor="#fff2f5f9"
-                    p5:cardCornerRadius="@dimen/abc_action_bar_content_inset_material"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1">
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:minWidth="25px"
-                        android:minHeight="25px"
-                        android:id="@+id/linearLayout5"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:layout_gravity="center">
-                        <EditText
-                            android:inputType="textEmailAddress"
-                            android:id="@+id/editText1"
-                            android:ellipsize="none"
-                            android:hint="Søk"
-                            android:layout_width="158.0dp"
-                            android:layout_height="match_parent"
-                            android:textColor="#0f0f0f"
-                            android:textColorHint="#3d3c3c"
-                            android:gravity="center"
-                            android:layout_weight="1"
-                            android:layout_gravity="center" />
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
-                <ImageView
-                    android:src="@drawable/iconmenuround"
-                    android:id="@+id/SettingsImage"
-                    android:clickable="true"
-                    android:foregroundTint="#00000000"
-                    android:layout_width="match_parent"
-                    android:layout_height="50.0dp"
-                    android:layout_weight="2"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_gravity="center">
+                <EditText
+                    android:inputType="textEmailAddress"
+                    android:id="@+id/editText1"
+                    android:ellipsize="none"
+                    android:hint="Søk..."
+                    android:layout_width="158.0dp"
+                    android:layout_height="match_parent"
+                    android:textColor="#0f0f0f"
+                    android:textColorHint="#3d3c3c"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_gravity="center" />
             </LinearLayout>
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
+        <ImageView
+            android:src="@drawable/iconmenuround"
+            android:id="@+id/SettingsImage"
+            android:clickable="true"
+            android:foregroundTint="#00000000"
+            android:layout_width="match_parent"
+            android:layout_height="50.0dp"
+            android:layout_weight="2"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:tint="#ff0075a1" />
     </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
